Fix typing text cut off

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -124,7 +124,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 19px;
-    animation: pulse 1s infinite;
+    height: 35px;
 }
 
 .composer-panel {
